--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:jsQR": "cd src/lib/jsQR/ && gulp",
     "build:middleware": "cd src/lib/middleware/ && webpack",
     "build:venom": "tsc",
-    "build:wapi": "cd src/lib/wapi/ && webpack",
+    "build:wapi": "cd src/lib/wapi/ && webpack && npm run copy",
+    "copy":"cp package.json dist/lib/",
     "build": "npm run build:wapi && npm run build:middleware && npm run build:jsQR && npm run build:counter && npm run build:venom",
     "changelog:last": "conventional-changelog -p angular -r 2",
     "changelog:preview": "conventional-changelog -p angular -u",
