--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: 12.x
           registry-url: 'https://registry.npmjs.org'
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_WWMC_PACKAGE_SECRATE }}
 
       - name: Get npm cache directory
         id: npm-cache
@@ -40,12 +40,12 @@ jobs:
         run: npm ci || npm install
         env:
           PUPPETEER_SKIP_DOWNLOAD: true
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_WWMC_PACKAGE_SECRATE }}
 
       - name: Publish in NPM
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_WWMC_PACKAGE_SECRATE }}
 
       - name: Generate Changelog
         id: generate_changelog
